# care-gateway

./: .gitignore  Makefile  README.md  alembic.ini  install.zsh  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: bdaa1a998ae5_initial_schema.py
care_gateway/api_fastapi/: app.py
care_gateway/api_fastapi/routers/: claim_events.py  claims.py
care_gateway/api_flask/: app.py  views.py
care_gateway/api_flask/resources/: claim_events.py  claims.py  eligibility.py
care_gateway/api_flask/schemas/: claim.py  claim_event.py
care_gateway/db/: database.py
care_gateway/db/sqlalchemy_models/: models.py  session.py
care_gateway/db/sqlmodel_models/: models.py  session.py
care_gateway/service_grpc/: server.py  services.py
care_gateway/service_grpc/proto/claims/: claims.proto  claims_pb2.py  claims_pb2_grpc.py
care_gateway/service_grpc/proto/eligibility/: eligibility.proto  eligibility_pb2.py  eligibility_pb2_grpc.py
care_gateway/service_grpc/proto/greeter/: greeter.proto  greeter_pb2.py  greeter_pb2_grpc.py
care_gateway/utils/: create_test_db.py  logging_config.py
care_gateway/worker_kafka/: app.py  kafka_consumer.py
care_gateway/worker_kafka/edi_etl/: edi_transform.py  loaders.py  processor.py  tasks.py
config/: .coveragerc  pytest.ini
data/inbox/: new_file_001.txt
scripts/: create_test_db.py  run_api_fastapi.zsh  run_api_flask.py  run_etl_local.py  run_kafka_scheduler.py  run_service_grpc.py  send_kafka_event.py
tests/: requests.http
tests/api_fastapi/: conftest.py  test_claim_events.py  test_claims.py
tests/api_flask/: conftest.py  test_claim_events.py  test_claims.py  test_eligibility.py
tests/db/: test_sqlalchemy_session.py  test_sqlmodel_session.py
tests/service_grpc/: test_services.py
tests/utils/: create_test_db.py
tests/worker_kafka/: test_edi_transform.py  test_loaders.py
